# life-engine

./: CMakeLists.txt  README.md
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: main.cpp
